--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "guzzlehttp/guzzle": "^6.1",
         "jms/serializer": "^1.0",
         "jms/metadata": "^1.5",
-        "doctrine/annotations": "^1.2"
+        "doctrine/annotations": "^1.2",
+        "nocarrier/hal": "^0.9.11"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8"
