--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "tystr/rest-orm",
     "description": "A simple ORM-like library handling object persistence with a RESTful API.",
+    "keywords": ["orm", "rest", "api"],
     "require": {
         "php": ">=5.5",
         "guzzlehttp/guzzle": "^6.1",
