--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,5 @@ before_script: composer require satooshi/php-coveralls --dev
 script:
   - mkdir -p build/logs
   - ./vendor/bin/phpunit --coverage-clover=build/logs/clover.xml
+
+after_script: ./vendor/bin/coveralls
