--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         "nocarrier/hal": "^0.9.11"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8",
-        "fabpot/php-cs-fixer": "^1.10"
+        "fabpot/php-cs-fixer": "^1.10",
+        "phpunit/phpunit": "~6.0"
     },
     "license": "MIT",
     "authors": [
