--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "A simple ORM-like library handling object persistence with a RESTful API.",
     "keywords": ["orm", "rest", "api"],
     "require": {
-        "php": ">=5.5",
+        "php": ">=7.0",
         "guzzlehttp/guzzle": "^6.1",
         "jms/serializer": "^1.0",
         "jms/metadata": "^1.5",
@@ -11,8 +11,8 @@
         "nocarrier/hal": "^0.9.11"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8",
-        "fabpot/php-cs-fixer": "^1.10"
+        "fabpot/php-cs-fixer": "^1.10",
+        "phpunit/phpunit": "~6.0"
     },
     "license": "MIT",
     "authors": [
